--- a/archive_stable_burgers_1D/src/additional_tests.ipynb
+++ b/archive_stable_burgers_1D/src/additional_tests.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d193cc98-083e-4857-a695-d1e1afaa3836",
    "metadata": {},
    "outputs": [
@@ -29,15 +29,9 @@
      "output_type": "stream",
      "text": [
       "testing model 0\n",
-      "train shape: torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00060\n",
-      "mean Relative L2 Loss: 0.02260\n",
+      "Validation Loss: 0.00060, mean Relative L2 Loss: 0.02260, R-squared: 0.99765\n",
       "(1200, 32)\n",
-      "train shape: torch.Size([1000, 1, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 1, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00058\n",
-      "mean Relative L2 Loss: 0.02317\n"
+      "Validation Loss: 0.00058, mean Relative L2 Loss: 0.02317, R-squared: 0.99771\n"
      ]
     }
    ],
@@ -55,8 +49,8 @@
     "    test_data = [torch.from_numpy(d).float().to(device).reshape((200,128,1)) for d in test_data]\n",
     "    (x_train, a_train, y_train, u_train) = train_data\n",
     "    (x_test, a_test, y_test, u_test)     = test_data\n",
-    "    print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
-    "    print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
+    "    # print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
+    "    # print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
     "        \n",
     "    validate_model(model, test_data, criterion, device=device)\n",
     "    \n",
@@ -65,7 +59,7 @@
     "    '''\n",
     "    def get_data_subsample_input(ntrain, ntest):\n",
     "        N = ntrain + ntest\n",
-    "        data = io.loadmat(\"./Burgers/burgers_data_R10.mat\")\n",
+    "        data = io.loadmat(\"../Burgers/burgers_data_R10.mat\")\n",
     "    \n",
     "        def get_fixed_indices_input(N):\n",
     "            indices_1 = np.arange(0, 2**13, 2**6)\n",
@@ -108,12 +102,12 @@
     "    test_data = [torch.from_numpy(d).float().to(device).unsqueeze(2) for d in test_data]\n",
     "    (x_train, a_train, y_train, u_train) = train_data\n",
     "    (x_test, a_test, y_test, u_test)     = test_data\n",
-    "    print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
-    "    print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
+    "    # print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
+    "    # print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
     "    validate_model(model, test_data, criterion, device=device)\n",
     "\n",
     "paths = [\n",
-    "    './saved_models/model_ex0.pth',\n",
+    "    '../saved_models/model_save_0.pth',\n",
     "]\n",
     "models = [\n",
     "    DeepONet(),\n",
@@ -126,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0ab82865-ec5f-4397-9535-5121de304ae9",
    "metadata": {},
    "outputs": [
@@ -134,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "testing model 0\n"
+      "testing model 1\n"
      ]
     },
     {
@@ -149,45 +143,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train shape: torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00027\n",
-      "mean Relative L2 Loss: 0.01553\n",
+      "Validation Loss: 0.00027, mean Relative L2 Loss: 0.01553, R-squared: 0.99894\n",
       "(1200, 32)\n",
-      "train shape: torch.Size([1000, 32, 1]) torch.Size([1000, 32, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 32, 1]) torch.Size([200, 32, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00029\n",
-      "mean Relative L2 Loss: 0.01706\n",
-      "testing model 1\n",
-      "train shape: torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00029\n",
-      "mean Relative L2 Loss: 0.01582\n",
-      "(1200, 32)\n",
-      "train shape: torch.Size([1000, 32, 1]) torch.Size([1000, 32, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 32, 1]) torch.Size([200, 32, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00031\n",
-      "mean Relative L2 Loss: 0.01795\n",
+      "Validation Loss: 0.00029, mean Relative L2 Loss: 0.01706, R-squared: 0.99888\n",
       "testing model 2\n",
-      "train shape: torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00024\n",
-      "mean Relative L2 Loss: 0.01466\n",
+      "Validation Loss: 0.00029, mean Relative L2 Loss: 0.01582, R-squared: 0.99888\n",
       "(1200, 32)\n",
-      "train shape: torch.Size([1000, 32, 1]) torch.Size([1000, 32, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 32, 1]) torch.Size([200, 32, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00026\n",
-      "mean Relative L2 Loss: 0.01702\n",
+      "Validation Loss: 0.00031, mean Relative L2 Loss: 0.01795, R-squared: 0.99877\n",
       "testing model 3\n",
-      "train shape: torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00029\n",
-      "mean Relative L2 Loss: 0.01624\n",
+      "Validation Loss: 0.00024, mean Relative L2 Loss: 0.01466, R-squared: 0.99904\n",
       "(1200, 32)\n",
-      "train shape: torch.Size([1000, 32, 1]) torch.Size([1000, 32, 1]) torch.Size([1000, 128, 1]) torch.Size([1000, 128, 1])\n",
-      "test shape: torch.Size([200, 32, 1]) torch.Size([200, 32, 1]) torch.Size([200, 128, 1]) torch.Size([200, 128, 1])\n",
-      "Validation Loss: 0.00029\n",
-      "mean Relative L2 Loss: 0.01751\n"
+      "Validation Loss: 0.00026, mean Relative L2 Loss: 0.01702, R-squared: 0.99896\n",
+      "testing model 4\n",
+      "Validation Loss: 0.00029, mean Relative L2 Loss: 0.01624, R-squared: 0.99887\n",
+      "(1200, 32)\n",
+      "Validation Loss: 0.00029, mean Relative L2 Loss: 0.01751, R-squared: 0.99885\n"
      ]
     }
    ],
@@ -205,8 +175,8 @@
     "    test_data = [torch.from_numpy(d).float().to(device).reshape((200,128,1)) for d in test_data]\n",
     "    (x_train, a_train, y_train, u_train) = train_data\n",
     "    (x_test, a_test, y_test, u_test)     = test_data\n",
-    "    print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
-    "    print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
+    "    # print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
+    "    # print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
     "        \n",
     "    validate_model(model, test_data, criterion, device=device)\n",
     "\n",
@@ -215,7 +185,7 @@
     "    '''\n",
     "    def get_data_subsample_input(ntrain, ntest):\n",
     "        N = ntrain + ntest\n",
-    "        data = io.loadmat(\"./Burgers/burgers_data_R10.mat\")\n",
+    "        data = io.loadmat(\"../Burgers/burgers_data_R10.mat\")\n",
     "    \n",
     "        def get_fixed_indices_input(N, num_samples):\n",
     "            indices_1 = np.arange(0, 2**13, 2**6)\n",
@@ -266,15 +236,15 @@
     "    test_data = [torch.from_numpy(d).float().to(device).unsqueeze(2) for d in test_data]\n",
     "    (x_train, a_train, y_train, u_train) = train_data\n",
     "    (x_test, a_test, y_test, u_test)     = test_data\n",
-    "    print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
-    "    print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
+    "    # print(\"train shape:\", x_train.shape, a_train.shape, y_train.shape, u_train.shape)\n",
+    "    # print(\"test shape:\", x_test.shape, a_test.shape, y_test.shape, u_test.shape)\n",
     "    validate_model(model, test_data, criterion, device=device)\n",
     "\n",
     "paths = [\n",
-    "    './saved_models/model_ex1.pth',\n",
-    "    './saved_models/model_ex2.pth',\n",
-    "    './saved_models/model_ex3.pth',\n",
-    "    './saved_models/model_ex4.pth',\n",
+    "    '../saved_models/model_save_1.pth',\n",
+    "    '../saved_models/model_save_2.pth',\n",
+    "    '../saved_models/model_save_3.pth',\n",
+    "    '../saved_models/model_save_4.pth',\n",
     "]\n",
     "models = [\n",
     "    BelNet(num_learned_basis = 50, num_fixed_basis = 0),\n",
@@ -284,14 +254,22 @@
     "]\n",
     "\n",
     "for model_idx, (path, model) in enumerate(zip(paths, models)):\n",
-    "    print(f\"testing model {model_idx}\")\n",
+    "    print(f\"testing model {model_idx+1}\")\n",
     "    test_loaded_model(path, model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ab9358b-c08b-45d0-bb7d-6519f1ef12f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -305,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
